package com.example.AISafePSOFT_26.Aircraft.domain;

public enum AircraftAvailability {
    AVAILABLE,
    IN_FLIGHT,
    MAINTENANCE,
    INACTIVE
}