package com.example.AISafePSOFT_26.Airport;

public enum ContactType {
    PHONE,EMAIL,FAX,SOCIAL_NETWORK
}
