package com.example.AISafePSOFT_26.Flight;

public enum FlightStatus {
    DELAYED,SCHEDULED,DEPARTED,CANCELED,ARRIVED
}
