package com.example.AISafePSOFT_26.Route;

public enum RouteStatus {
    ACTIVE,INACTIVE,ARCHIVED
}
